# vector-db-projects

./: .gitignore  01-simple-movie-search.ipynb  02-Book-search-engine.ipynb  03-FAQ-Search.ipynb  04-Find-by-skill.ipynb  05-resume-search.ipynb  06-CV-pdf-search.ipynb  07-Chat_with_documents(RAG).ipynb  README.md  main.py  pyproject.toml
chromdb/: chroma.sqlite3
