[project]
name = "vector-db-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.44.0",
    "pypdf>=6.14.2",
]
